<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username" />

    <EditText
        android:id="@+id/cin_user"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username"
        android:lines="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/cin_pass"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:lines="1" />

    <Button
        android:id="@+id/checkUserInfo"
        android:onClick=""
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:text="@string/login" />

</LinearLayout>